spade-tests/src/snapshots/spade_tests__linear_check__unused_transitive_field_causes_error.snap
---
source: spade-tests/src/linear_check.rs
---
struct port A {
    x: &mut bool,
    y: &bool
}
struct port B {
    a: A
}
entity x(resource: B) -> bool {
    true
}


error: Unused resource
  ┌─ testinput:8:10
  │
8 │ entity x(resource: B) -> bool {
  │          ^^^^^^^^ resource.a.x is unused
  │
  = note: resource.a.x is a &mut value which must be set


